# cargo-tag

./: Cargo.toml  README.md
src/: main.rs
